--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
+	  rel="stylesheet" type="text/css">
     <style type="text/css">
 
       /* Large desktop */
@@ -33,7 +40,7 @@
        }
       }
 
-      /* All form foctors */
+      /* All form factors */
       body {
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
@@ -116,61 +123,117 @@
     </div>
 
     <div class="container">
-      <div class="row navigation">
-        <div class="span2 logo">
-          Logo
-        </div>
-        <div class="span6 blank">
-          Blank
-        </div>
-        <div class="span4 about">
-          About
-        </div>
-      </div>
-      <div class="row heading">
+      <div class="row-fluid heading">
         <div class="span12">
-          <h1>Bitstarter Title</h1>
+          <h1>Product</h1>
         </div>
       </div> 
-     <div class="row subheading">
+     <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
+          <p class="lead">One sentance description.</p>
         </div>
       </div>
-      <div class="row pitch">
-        <div class="span6 video">
-          Video
+      <div class="row-fluid pitch">
+        <div class="span5 offset1 video">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
-        <div class="span6">
-          <div class="thermometer">
-            Thermometer
-          </div>
-          <div class="order">
-            Order
-          </div>
-          <div class="social">
-            Social
-          </div>
-        </div>
+
+	<div class="span5 actions">
+	  <div class="span8 offset2">
+	    <div class="statistics">
+	      <div class="span4">
+		<div class="linediv-l">
+		  <h3>1000</h3> <p>backers</p>
+		</div>
+	      </div>
+	      <div class="span4">
+		<div class="linediv-c">
+		  <h3>$6000</h3> <p>of $10,000</p>
+		</div>
+	      </div>
+	      <div class="span4">
+		<div class="linediv-r">
+		  <h3>10</h3> <p>days left</p>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="span10 offset1">
+	    <div class="thermometer progress active">
+	      <div class="bar bar-success" style="width: 60%;"></div>
+	      <div class="bar bar-warning" style="width: 40%;"></div>
+	    </div>
+	  </div>
+	  <div class="span6 offset3 order">
+	    <button class="btn btn-success btn-large">Preorder</button>
+	  </div>
+	  <div class="span8 offset2 social">
+	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+	  </div>
+	</div>
       </div>
-      <div class="row section1">
-        <div class="span12">
-          Marketing Section 1
-        </div>
+
+      <div class="row-fluid section1">
+	<div class="span5 offset1 asset">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+	<div class="span5 copy">
+	  <p>
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dignissim, est ut consequat fringilla, risus ante mollis nibh, nec ullamcorper ipsum diam eget libero. Fusce risus erat, convallis vitae orci nec, sodales sollicitudin justo. Maecenas ullamcorper fringilla eros vel tincidunt. Proin bibendum imperdiet turpis, in viverra nisi tincidunt a. Curabitur vehicula vitae nisl eu dignissim. Curabitur eu tempus lectus, tempus rhoncus dolor. Nullam ut ornare purus, varius pharetra urna. Cras ut auctor dolor. Fusce molestie mattis risus. Fusce imperdiet orci et posuere laoreet.
+	  </p>
+	</div>
       </div>
-      <div class="row section2">
+
+      <div class="row-fluid section2">
+	<div class="span5 offset1 copy copy-right">
+	  <p>
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dignissim, est ut consequat fringilla, risus ante mollis nibh, nec ullamcorper ipsum diam eget libero. Fusce risus erat, convallis vitae orci nec, sodales sollicitudin justo. Maecenas ullamcorper fringilla eros vel tincidunt. Proin bibendum imperdiet turpis, in viverra nisi tincidunt a. Curabitur vehicula vitae nisl eu dignissim. Curabitur eu tempus lectus, tempus rhoncus dolor. Nullam ut ornare purus, varius pharetra urna. Cras ut auctor dolor. Fusce molestie mattis risus. Fusce imperdiet orci et posuere laoreet.
+	  </p>
+	</div>
+	<div class="span5 asset">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+
+	<div class="row-fluid faq">
+	  <div class="span10 offset1">
+	    <h3>FAQ</h3>
+	    <div class="accordion" id="accordion2">
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" data-toggle="collapse"
+		     data-parent="#accordion2" href="#collapseOne">
+		    What does FAQ stand for?
+		  </a>
+		</div>
+		<div id="collapseOne" class="accordion-body collapse">
+		  <div class="accordion-inner">
+		    Frequently Asked Questions
+		  </div>
+		</div>
+	      </div>
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" data-toggle="collapse"
+		     data-parent="#accordion2" href="#collapseTwo">
+		    What's a Frequently Asked Question?
+		  </a>
+		</div>
+		<div id="collapseTwo" class="accordion-body collapse">
+		  <div class="accordion-inner">
+		    A question which is commonly asked by users.
+		  </div>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+
+     </div>
+
+      <div class="row-fluid footer">
         <div class="span12">
-          Marketing Section 2
-        </div>
-      </div>
-      <div class="row faq">
-        <div class="span12">
-          FAQ
-        </div>
-      </div>
-      <div class="row footer">
-        <div class="span12">
-          Footer
+          <p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>
+	    , without all the cruft that would otherwise be put at the bottom of the page.</p>
         </div>
       </div>
     </div>
