Updated text for Tubs.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Tubs: An Introspective - Cat fly on the wall documentary.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -110,7 +110,7 @@
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	  </button>
-	  <a class="brand" href="#">Bitstarter</a>
+	  <a class="brand" href="#">Tubs</a>
 	  <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class="active"><a href="#">Home</a></li>
@@ -125,12 +125,12 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Tubs: An Introspective</h1>
         </div>
       </div> 
      <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">One sentance description.</p>
+          <p class="lead">He's round, he's fury, he's deep. A mini-series following the life of Tubs.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -143,29 +143,29 @@
 	    <div class="statistics">
 	      <div class="span4">
 		<div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
+		  <h3>0</h3> <p>backers</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <h3>$0</h3> <p>of $2,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>30</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
 	  </div>
 	  <div class="span10 offset1">
 	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 60%;"></div>
-	      <div class="bar bar-warning" style="width: 40%;"></div>
+	      <div class="bar bar-success" style="width: 0%;"></div>
+	      <div class="bar bar-warning" style="width: 100%;"></div>
 	    </div>
 	  </div>
 	  <div class="span6 offset3 order">
-	    <button class="btn btn-success btn-large">Preorder</button>
+	    <button class="btn btn-success btn-large">Back This Project</button>
 	  </div>
 	  <div class="span8 offset2 social">
 	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
@@ -179,16 +179,18 @@
 	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
 	<div class="span5 copy">
+	  <h3>What's it about?</h3>
 	  <p>
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dignissim, est ut consequat fringilla, risus ante mollis nibh, nec ullamcorper ipsum diam eget libero. Fusce risus erat, convallis vitae orci nec, sodales sollicitudin justo. Maecenas ullamcorper fringilla eros vel tincidunt. Proin bibendum imperdiet turpis, in viverra nisi tincidunt a. Curabitur vehicula vitae nisl eu dignissim. Curabitur eu tempus lectus, tempus rhoncus dolor. Nullam ut ornare purus, varius pharetra urna. Cras ut auctor dolor. Fusce molestie mattis risus. Fusce imperdiet orci et posuere laoreet.
+	    It's a series of short films about a cat called Tubs. From the outside he looks like a rotun, fun loving, simple minded creature but on the inside we are witness to his daily philosophical contemplations and obsession with kibble. The films are a comedic look at what life is like for a house cat in the big city.
 	  </p>
 	</div>
       </div>
 
       <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
+	 <h3>Why should I care?</h3>
 	  <p>
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dignissim, est ut consequat fringilla, risus ante mollis nibh, nec ullamcorper ipsum diam eget libero. Fusce risus erat, convallis vitae orci nec, sodales sollicitudin justo. Maecenas ullamcorper fringilla eros vel tincidunt. Proin bibendum imperdiet turpis, in viverra nisi tincidunt a. Curabitur vehicula vitae nisl eu dignissim. Curabitur eu tempus lectus, tempus rhoncus dolor. Nullam ut ornare purus, varius pharetra urna. Cras ut auctor dolor. Fusce molestie mattis risus. Fusce imperdiet orci et posuere laoreet.
+	    If you like comedy, or if you like youtube cat videos (and who doesn't) - these films are for you. The money we raise will go towards the lighting and camera equipment needed to realize my vision of being emersed in the mind of tubs. This is the natural evolution of the cat video, and I hope that the funny, professional shorts can be enjoyed and loved the world over.
 	  </p>
 	</div>
 	<div class="span5 asset">
@@ -203,12 +205,12 @@
 		<div class="accordion-heading">
 		  <a class="accordion-toggle" data-toggle="collapse"
 		     data-parent="#accordion2" href="#collapseOne">
-		    What does FAQ stand for?
+		    Where will the movies be based?
 		  </a>
 		</div>
 		<div id="collapseOne" class="accordion-body collapse">
 		  <div class="accordion-inner">
-		    Frequently Asked Questions
+		    The movies will be based in Jersey City, Tub's hometown.
 		  </div>
 		</div>
 	      </div>
@@ -216,12 +218,12 @@
 		<div class="accordion-heading">
 		  <a class="accordion-toggle" data-toggle="collapse"
 		     data-parent="#accordion2" href="#collapseTwo">
-		    What's a Frequently Asked Question?
+		    How many shorts are in the mini series?
 		  </a>
 		</div>
 		<div id="collapseTwo" class="accordion-body collapse">
 		  <div class="accordion-inner">
-		    A question which is commonly asked by users.
+		    My intention is to do at least three and measure the response from there. When pledging to this campaign you will receive access to at least three, along with any special extras promised with the amount you donate.
 		  </div>
 		</div>
 	      </div>
