Added tubs image links to the code.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/Oh3v5iy.png">
         </div>
 
 	<div class="span5 actions">
@@ -176,7 +176,7 @@
 
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://i.imgur.com/TEsoGqd.png">
 	</div>
 	<div class="span5 copy">
 	  <h3>What's it about?</h3>
@@ -194,7 +194,7 @@
 	  </p>
 	</div>
 	<div class="span5 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://i.imgur.com/mMN0M4o.png">
 	</div>
 
 	<div class="row-fluid faq">
