Updated description line and deleted a few things.

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 		</div>
 		<div id="collapseOne" class="accordion-body collapse">
 		  <div class="accordion-inner">
-		    The movies will be based in Jersey City, Tub's hometown.
+		    The movies will be based in Jersey City, Tub's new hometown.
 		  </div>
 		</div>
 	      </div>
