--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div> 
      <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">He's round, he's fury, he's deep. A mini-series following the life of Tubs.</p>
+          <p class="lead">He's round, he's furry, he's deep. A mini-series following the life of Tubs.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
