--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 	    </div>
 	  </div>
 	  <div class="span6 offset3 order">
-	    <button class="btn btn-success btn-large">Back This Project</button>
-	  </div>
+	    <a class="coinbase-button" data-code="7e4d729439fb1f9993a24381dbe1c6b8" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/7e4d729439fb1f9993a24381dbe1c6b8">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+		      </div>
 	  <div class="span8 offset2 social">
 	    <!-- AddThis Button BEGIN -->
 	    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
